objects/JunoDoc__Doc_Template__c/JunoDoc__Doc_Template__c.object-meta.xml
<CustomObject>
    <label>Junodoc Templates</label>
    <nameField>
        <label>Doc Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junodoc Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>