objects/JunoDoc__Doc_Template__c/fields/JunoDoc__API_Name__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__API_Name__c</fullName>
    <label>API Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>