objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Background_Image_URL__c</fullName>
    <label>Background Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>