objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Blank_Fields_As_Zeroes__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Blank_Fields_As_Zeroes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Blank Fields As Zeroes</label>
    <type>Checkbox</type>
</CustomField>