objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Currency_Format__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Currency_Format__c</fullName>
    <label>Currency Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>