objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Currency_Symbol__c</fullName>
    <label>Currency Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>