objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Doc_Template_Footer__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Doc_Template_Footer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Template Footer</label>
    <referenceTo>JunoDoc__Doc_Template_Footer__c</referenceTo>
    <relationshipName>Doc_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>