objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Doc_Template_Header__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Doc_Template_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Template Header</label>
    <referenceTo>JunoDoc__Doc_Template_Header__c</referenceTo>
    <relationshipName>Doc_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>