objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Hide_Footer__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Hide_Footer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Footer</label>
    <type>Checkbox</type>
</CustomField>