objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Hide_Header__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Hide_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Header</label>
    <type>Checkbox</type>
</CustomField>