objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Number_Format__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Number_Format__c</fullName>
    <label>Number Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>