objects/JunoDoc__Doc_Template__c/fields/JunoDoc__PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__PDF_Name__c</fullName>
    <label>PDF Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>