objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Show_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Show_Page_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Page Number</label>
    <type>Checkbox</type>
</CustomField>