objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Show_Templates__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Show_Templates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Templates</label>
    <type>Checkbox</type>
</CustomField>