objects/JunoDoc__Doc_Template__c/fields/JunoDoc__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Word Document</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>