objects/JunoDoc__Doc_Template__c/recordTypes/JunoDoc__Excel_Template.recordType-meta.xml
<RecordType>
    <fullName>JunoDoc__Excel_Template</fullName>
    <active>false</active>
    <label>Excel Template</label>
</RecordType>