objects/JunoDoc__Doc_Template__c/recordTypes/JunoDoc__Junodoc_Word_Template.recordType-meta.xml
<RecordType>
    <fullName>JunoDoc__Junodoc_Word_Template</fullName>
    <active>true</active>
    <description>Junodoc Word Template</description>
    <label>Junodoc Word Template</label>
</RecordType>