objects/JunoDoc__Doc_Template__c/recordTypes/JunoDoc__PDF_Template.recordType-meta.xml
<RecordType>
    <fullName>JunoDoc__PDF_Template</fullName>
    <active>true</active>
    <label>PDF Template</label>
</RecordType>