objects/JunoDoc__Doc_Template__c/listViews/JunoDoc__All.listView-meta.xml
<ListView>
    <fullName>JunoDoc__All</fullName>
    <columns>NAME</columns>
    <columns>JunoDoc__Parent_Object__c</columns>
    <columns>JunoDoc__Parent_Fields__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>